src/objects/FSTR__PCE_Virtual_Step__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <fields>
        <fullName>FSTR__Business_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Virtual Steps</relationshipLabel>
        <relationshipName>Virtual_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Process</label>
        <referenceTo>FSTR__Business_Process__c</referenceTo>
        <relationshipLabel>Virtual Steps</relationshipLabel>
        <relationshipName>Virtual_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Virtual Steps</relationshipLabel>
        <relationshipName>Virtual_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Virtual Steps</relationshipLabel>
        <relationshipName>Virtual_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Virtual Steps</relationshipLabel>
        <relationshipName>Virtual_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_Date__c</fullName>
        <description>The datetime when the step was last completed.</description>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Virtual Steps</relationshipLabel>
        <relationshipName>PCE_Virtual_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Definition_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Definition</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipLabel>Virtual Steps</relationshipLabel>
        <relationshipName>PCE_Virtual_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FSTR__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__First_Created__c</fullName>
        <description>The datetime when the step was initially created.</description>
        <label>First Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Generated_Step_Id__c</fullName>
        <externalId>true</externalId>
        <label>Generated Step Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Is_Generated_Step__c</fullName>
        <formula>AND(
FSTR__Generated_Step_Id__c!=&apos;&apos;,
FSTR__Generated_Step_Id__c!=NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generated Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Iteration__c</fullName>
        <description>The number of times this step has been repeated (looped).</description>
        <label>Iteration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Virtual Steps</relationshipLabel>
        <relationshipName>Virtual_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Link__c</fullName>
        <formula>if(
FSTR__Generated_Step_Id__c!=null,
HYPERLINK(LEFT($Api.Enterprise_Server_URL_360,FIND(&apos;.com/&apos;,$Api.Enterprise_Server_URL_360)+3) + &apos;/&apos;+ FSTR__Generated_Step_Id__c,&apos;View Actual Step&apos;,&apos;_blank&apos;),
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A link to the actual step object that has been generated, if it exists.</inlineHelpText>
        <label>Generated Step Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Virtual Steps</relationshipLabel>
        <relationshipName>Virtual_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Stage_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stage</label>
        <referenceTo>FSTR__PCE_Stage__c</referenceTo>
        <relationshipLabel>Virtual Steps</relationshipLabel>
        <relationshipName>PCE_Virtual_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Step_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Virtual Steps</relationshipLabel>
        <relationshipName>Virtual_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Virtual Step</label>
    <listViews>
        <fullName>FSTR__AllSteps</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>FSTR__Is_Generated_Step__c</columns>
        <columns>FSTR__Subject__c</columns>
        <columns>FSTR__Case__c</columns>
        <columns>FSTR__Business_Account__c</columns>
        <columns>FSTR__Client__c</columns>
        <columns>FSTR__Step_Lookup__c</columns>
        <columns>FSTR__Definition_Lookup__c</columns>
        <columns>FSTR__Link__c</columns>
        <columns>FSTR__Due_Date__c</columns>
        <columns>FSTR__Status__c</columns>
        <columns>FSTR__Business_Process__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Steps</label>
    </listViews>
    <listViews>
        <fullName>FSTR__ExistingSteps</fullName>
        <columns>NAME</columns>
        <columns>FSTR__Subject__c</columns>
        <columns>FSTR__Is_Generated_Step__c</columns>
        <columns>FSTR__Business_Account__c</columns>
        <columns>FSTR__Client__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>FSTR__Step_Lookup__c</columns>
        <columns>FSTR__Link__c</columns>
        <columns>FSTR__Due_Date__c</columns>
        <columns>FSTR__Status__c</columns>
        <columns>FSTR__Business_Process__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FSTR__Is_Generated_Step__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Existing Steps</label>
    </listViews>
    <listViews>
        <fullName>FSTR__MyVirtualSteps</fullName>
        <columns>NAME</columns>
        <columns>FSTR__Subject__c</columns>
        <columns>FSTR__Is_Generated_Step__c</columns>
        <columns>FSTR__Business_Account__c</columns>
        <columns>FSTR__Client__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>FSTR__Step_Lookup__c</columns>
        <columns>FSTR__Link__c</columns>
        <columns>FSTR__Due_Date__c</columns>
        <columns>FSTR__Status__c</columns>
        <columns>FSTR__Business_Process__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Virtual Steps</label>
    </listViews>
    <nameField>
        <label>Virtual Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Virtual Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>